# semver

./: .bumpversion.cfg  .semver.toml  Cargo.toml  HISTORY.md  Makefile  README.md  bump.py  pyproject.toml  tag.sh
.github/workflows/: ci.yaml
src/: bin.rs  bump.rs  cli.yaml  cmd.rs  config.rs  core.rs  file.rs  lib.rs  next.rs  template.rs  tests.rs  validate.rs
src/bump/: tests.rs
src/cmd/: bump.rs  error.rs  helpers.rs  validate.rs
src/cmd/bump/: args.rs  cli.rs  tests.rs
src/cmd/validate/: args.rs  cli.rs  tests.rs
src/config/: tests.rs
src/core/: error.rs  part.rs  tests.rs  version.rs  version_manager.rs
src/core/tests/: test_version.rs  test_version_manager.rs
src/file/: tests.rs
src/next/: tests.rs
src/template/: tests.rs
src/validate/: tests.rs
