[package]
name = "semver"
version = "0.1.0-dev.1"
authors = ["Lou Marvin Caraig <loumarvincaraig@gmail.com>"]
edition = "2021"
description = "CLI to bump and check versions according to semver"
readme = "README.md"
repository = "https://github.com/se7entyse7en/semver"
license = "Apache-2.0"
keywords = ["semver"]

[lib]
name = "semver"
path = "src/lib.rs"

[[bin]]
name = "semver"
path = "src/bin.rs"

[dependencies]
clap = { version = "3.0.0-beta.5", features = ["yaml"] }
