[package]
name = "semver"
version = "0.2.0-dev.3"
authors = ["Lou Marvin Caraig <loumarvincaraig@gmail.com>"]
edition = "2021"
description = "CLI to bump and check versions according to semver"
readme = "README.md"
repository = "https://github.com/se7entyse7en/semver"
license = "Apache-2.0"
keywords = ["semver"]

[lib]
name = "semver"
path = "src/lib.rs"

[[bin]]
name = "semver"
path = "src/bin.rs"

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
regex = "1.5"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
js-sandbox = "0.1.6"
anyhow = "1.0.57"
tinytemplate = "1.2.1"
chrono = "0.4"

[dev-dependencies]
uuid = { version="1.1.0", features=["v4"]}