[tool.poetry]
name = "semver"
version = "0.0.0"
description = "CLI to bump and check versions according to semver"
authors = ["Lou Marvin Caraig <loumarvincaraig@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
